# ckb-contract-script

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENCE  Makefile  README.md
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
calculator/opticrum/: Cargo.toml  README.md
calculator/opticrum/src/: calculator.rs  config.rs  lib.rs  operation.rs  reader.rs  types.rs
contracts/opticrum/: Cargo.toml  Makefile  README.md
contracts/opticrum/src/: error.rs  main.rs  state.rs  utils.rs
contracts/opticrum/src/verifiers/: match_destroy.rs  match_discard.rs  match_enable.rs  match_extract.rs  match_update.rs  mod.rs  order_cancel.rs  order_match.rs  root.rs
deployment/testnet/: opticrum.json
opticrum-protocol/: Cargo.toml
opticrum-protocol/src/: keyagg.rs  lib.rs
secp256k1/ckb-lib-secp256k1/: Makefile  secp256k1_blake2b.c
secp256k1/ckb-lib-secp256k1/ckb-production-scripts/c/: musig2_keyagg.h
secp256k1/src/: lib.rs
src/: main.rs
tests/: Cargo.toml
tests/src/: encoding.rs  faker.rs  integration.rs  lib.rs
tests/src/unit/: encoding.rs  mod.rs  verification.rs
tests/tests/: opticrum_tests.rs
