[workspace]
resolver = "2"

members = [
    "contracts/opticrum",
    "calculator/opticrum",
    "opticrum-protocol",
    "tests",
]

[workspace.dependencies]
ckb-cinnabar-calculator = { git = "https://github.com/ashuralyk/ckb-cinnabar.git", branch = "master" }
ckb-cinnabar-verifier = { git = "https://github.com/ashuralyk/ckb-cinnabar.git", branch = "master" }
ckb-cinnabar = { git = "https://github.com/ashuralyk/ckb-cinnabar.git", branch = "master" }

[package]
edition = "2021"
name = "opticrum-runner"
version = "0.1.0"

[dependencies]
ckb-cinnabar = { workspace = true }
opticrum-calculator = { path = "calculator/opticrum" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
overflow-checks = true
panic = 'abort'
strip = true
