[workspace]
resolver = "2"

members = [
    "contracts/opticrum",
    "calculator/opticrum",
    "opticrum-protocol",
    "tests",
]

[workspace.dependencies]
ckb-cinnabar-calculator = { git = "https://github.com/ashuralyk/ckb-cinnabar.git", branch = "master" }
ckb-cinnabar-verifier = { git = "https://github.com/ashuralyk/ckb-cinnabar.git", branch = "master" }
ckb-cinnabar = { git = "https://github.com/ashuralyk/ckb-cinnabar.git", branch = "master" }

[package]
edition = "2021"
name = "runner"
version = "0.1.0"
default-run = "runner"

[[bin]]
name = "runner"
path = "src/main.rs"

[[bin]]
name = "create_order"
path = "src/bin/create_order.rs"

[[bin]]
name = "scan_orders"
path = "src/bin/scan_orders.rs"

[[bin]]
name = "scan_matches"
path = "src/bin/scan_matches.rs"

[[bin]]
name = "match_order"
path = "src/bin/match_order.rs"

[[bin]]
name = "extract_liquidity_rent"
path = "src/bin/extract_liquidity_rent.rs"

[[bin]]
name = "topup_rent"
path = "src/bin/topup_rent.rs"

[[bin]]
name = "decline_rent"
path = "src/bin/decline_rent.rs"

[dependencies]
ckb-cinnabar = { workspace = true }
opticrum-calculator = { path = "calculator/opticrum" }
hex = "0.4.3"
dotenvy = "0.15"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
overflow-checks = true
panic = 'abort'
strip = true
