[package]
name = "opticrum-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-cinnabar-calculator = { workspace = true }
opticrum-calculator = { path = "../calculator/opticrum" }
opticrum-protocol = { path = "../opticrum-protocol" }
secp256k1 = { version = "0.30", features = ["std"] }
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
