[package]
name = "opticrum-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-cinnabar-calculator = { workspace = true }
opticrum-calculator = { path = "../calculator/opticrum" }
opticrum-protocol = { path = "../opticrum-protocol" }
musig2 = { version = "0.2.4", features = ["secp256k1"] }
secp256k1 = { version = "0.30", features = ["std"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
